--- a/sidebar-and-modal-project/index.html
+++ b/sidebar-and-modal-project/index.html
@@ -25,6 +25,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
+    <div id="sidebar-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
